--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -129,6 +129,8 @@ packageJson:
     author: AlfaLyr (https://github.com/alfalyr)
   scarlett:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)  
+  scott:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)  
   shaun:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd) 
   shirtcollar:
