--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -123,6 +123,8 @@ packageJson:
     private: true
   rufflebutterflysleeve:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd) 
+  sam:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   sammie:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)     
   sandy:
