--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -133,6 +133,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)  
   scott:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)  
+  shannon:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)  
   shaun:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd) 
   shirtcollar:
