--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -49,6 +49,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   dalton:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
+  dolmansleeve:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   fallon:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   fullshirtsleeve:
