--- a/designs/dolmansleeve/package.json
+++ b/designs/dolmansleeve/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@freesewing/fullshirtsleeve",
+  "name": "@freesewing/dolmansleeve",
   "version": "3.0.0-alpha.8",
-  "description": "Full shirt sleeves to be used in other designs",
+  "description": "Dolman sleeves to be used in other designs",
   "author": "bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)",
   "homepage": "https://freesewing.org/",
   "repository": "github:freesewing/freesewing",
@@ -49,8 +49,7 @@
     "@freesewing/core": "3.0.0-alpha.8",
     "@freesewing/plugin-bundle": "3.0.0-alpha.8",
     "@freesewing/plugin-logorg": "3.0.0-alpha.8",
-    "@freesewing/basicsleeve": "3.0.0-alpha.8",
-    "@freesewing/plugin-mirror": "3.0.0-alpha.8"
+    "@freesewing/basicsleeve": "3.0.0-alpha.8"
   },
   "dependencies": {},
   "devDependencies": {
