--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -23,6 +23,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   benjamin:
     author: woutervdub (https://github.com/woutervdub)
+  bernice:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   billy:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   boxpleatpocket:
