--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -110,6 +110,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   perry:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
+  petunia:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   plugin-gore:
     author: AlfaLyr (https://github.com/alfalyr)
   plugin-logorg:
