--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -153,6 +153,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)   
   spreadsleeve:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)   
+  terry:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)   
   theobald:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)   
   tiberius: *starf
