--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -112,6 +112,10 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   petunia:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
+  plugin-bandcurved:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
+  plugin-bandstraight:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   plugin-gore:
     author: AlfaLyr (https://github.com/alfalyr)
   plugin-logorg:
