--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -165,6 +165,9 @@ minerva:
   peer:
     '@freesewing/mildred': *freesewing
     '@freesewing/henry': *freesewing
+neckbandstraight:
+  peer:
+    '@freesewing/plugin-bandstraight': *freesewing
 new-design:
   _:
     'axios': '1.3.5'
@@ -316,7 +319,7 @@ terry:
   peer:
     '@freesewing/byron': *freesewing
     '@freesewing/simpleshirtsleeve': *freesewing
-    '@freesewing/waistbandstraight': *freesewing
+    '@freesewing/neckbandstraight': *freesewing
     '@freesewing/waistbandcurved': *freesewing
 theobald:
   peer:
