--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -85,6 +85,8 @@ packageJson:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   minerva:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
+  neckbandcurved:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   neckbandstraight:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   new-design:
