--- a/designs/beltloops/package.json
+++ b/designs/beltloops/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@freesewing/beltloops",
   "version": "3.0.0-alpha.8",
-  "description": "A pattern that needs a description",
+  "description": "Belt loop design to be used in other designs",
   "author": "bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)",
   "homepage": "https://freesewing.org/",
   "repository": "github:freesewing/freesewing",
