--- a/designs/neckbandcurved/package.json
+++ b/designs/neckbandcurved/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@freesewing/waistbandcurved",
+  "name": "@freesewing/neckbandcurved",
   "version": "3.0.0-alpha.8",
-  "description": "Curved waistband to be used in other designs",
+  "description": "Curved neckband design to be used in other designs",
   "author": "bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)",
   "homepage": "https://freesewing.org/",
   "repository": "github:freesewing/freesewing",
@@ -49,7 +49,7 @@
     "@freesewing/core": "3.0.0-alpha.8",
     "@freesewing/plugin-bundle": "3.0.0-alpha.8",
     "@freesewing/plugin-logorg": "3.0.0-alpha.8",
-    "@freesewing/bandcurved": "3.0.0-alpha.8"
+    "@freesewing/plugin-bandcurved": "3.0.0-alpha.8"
   },
   "dependencies": {},
   "devDependencies": {
