--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -65,6 +65,8 @@ packageJson:
     author: woutervdub (https://github.com/woutervdub)
   holmes:
     author: AlfaLyr (https://github.com/alfalyr)
+  hood:
+    author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   inseampocket:
     author: bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)
   i18n:
